# bmod

./: .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
BakkesModSDK/: .gitrepo
bmod-build/: Cargo.toml
bmod-build/src/: lib.rs
bmod-build/src/templates/: plugin.cc.tmpl  plugin.h.tmpl
bmod-install/: Cargo.toml
bmod-install/src/: cli.rs  error.rs  lib.rs  main.rs  rcon.rs
examples/test-plugin/: Cargo.toml  build.rs
examples/test-plugin/src/: lib.rs
install-plugin/: Cargo.toml
install-plugin/src/: cli.rs  main.rs
src/: lib.rs
