[package]
name = "bmod"
description = "BakkesModSDK for Rust"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
keywords = ["game", "rocket-league", "bakkesmod", "plugin"]
categories = ["API bindings", "Game development"]
license = "MIT"

[workspace]
members = [
    "bmod-build",
    "examples/test-plugin",
    "install-plugin",
]

[dependencies]
bitflags = "2"
cxx = "1"
