[package]
name = "bmod-install"
description = "Plugin installer for bakkesmod"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
onlyargs = { git = "https://github.com/parasyte/onlyargs.git", rev = "1bd04fceeecba9ce4716cf5cc39821966ea8ec1d" }
thiserror = "1"
ws-tool = "0.7"
