[package]
name = "bmod-install"
description = "Plugin installer for bakkesmod"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
onlyargs = { git = "https://github.com/parasyte/onlyargs.git", rev = "97cb6c34cd3a558d83ab41e2e19876707aea22b3" }
thiserror = "1"
ws-tool = "0.7"
