[package]
name = "bmod-install"
description = "Plugin installer for bakkesmod"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
onlyargs = { git = "https://github.com/parasyte/onlyargs.git", rev = "542dd2659a90e3f3b6ec6a24549938da39664f38" }
thiserror = "1"
ws-tool = "0.7"
